Fix overflow

--- a/www/game/app-game.less
+++ b/www/game/app-game.less
@@ -77,6 +77,7 @@
                 border: 2px solid @cryptpad_color_brand;
                 padding: 10px;
                 position: relative;
+                overflow: hidden;
 
                 .cp-character {
                     position: absolute;
